bin_PROGRAMS = bootimg-extract bootimg-create

bootimg_extract_SOURCES = \
	bootimg-extract.c \
	bootimg-utils.c \
	cJSON.c \
	cJSON_Utils.c

bootimg_create_SOURCES = \
	bootimg-create.c \
	bootimg-utils.c \
	cJSON.c \
	cJSON_Utils.c

include_HEADERS = bootimg.h bootimg-priv.h bootimg-utils.h cJSON.h cJSON_Utils.h
